# unsafe-review

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  MANIFEST.md  README.md  codecov.yml
.cargo/: mutants.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  settings.yml
.rails/: README.md  index.toml
.unsafe-review/: README.md
.unsafe-review-spec/: README.md  index.toml
badges/: unsafe-review-plus.json  unsafe-review.json
crates/unsafe-review/: Cargo.toml  README.md
crates/unsafe-review-cli/: Cargo.toml  README.md
crates/unsafe-review-cli/src/: command.rs  execute.rs  lib.rs  lsp.rs  parse.rs
crates/unsafe-review-cli/src/execute/: card_lookup.rs  confirm.rs  first_pr.rs
crates/unsafe-review-cli/src/lsp/: actions.rs  backend.rs  capabilities.rs  config.rs  diagnostics.rs  hover.rs  state.rs  tests.rs  uri.rs
crates/unsafe-review-cli/src/lsp/backend/: refresh.rs
crates/unsafe-review-cli/src/lsp/diagnostics/: data.rs
crates/unsafe-review-cli/src/parse/: check_parse.rs  confirm.rs  policy.rs  receipt.rs
crates/unsafe-review-cli/src/parse/receipt/: arg_value.rs  mod.rs  saved_output.rs  template.rs
crates/unsafe-review-cli/tests/: e2e.rs
crates/unsafe-review-core/: Cargo.toml  README.md
crates/unsafe-review-core/src/: api.rs  candidate.rs  lib.rs
crates/unsafe-review-core/src/analysis/: atomic_pointer_state.rs  cards.rs  classify.rs  copy_operation.rs  evidence.rs  ffi_boundary.rs  maybeuninit_operation.rs  mod.rs  nonnull_operation.rs  obligations.rs  pipeline.rs  receipts.rs  scanner.rs  set_len_shrink.rs  slice_operation.rs  static_mut.rs  summary.rs  syntax.rs  target_feature.rs  transmute_operation.rs  unsafe_impl.rs  unwrap_operation.rs  utf8_operation.rs  vec_operation.rs  witness.rs  zeroed_operation.rs
crates/unsafe-review-core/src/analysis/evidence/: alignment_discharge.rs  assignment_syntax.rs  boolean_condition.rs  bounds_discharge.rs  box_raw_origin.rs  call_syntax.rs  callee_contract_discharge.rs  capacity_discharge.rs  code_text.rs  contract_discharge.rs  contract_text.rs  control_flow.rs  copy_range.rs  evidence_state.rs  freshness.rs  generic_bounds.rs  get_unchecked.rs  identifier_syntax.rs  initialized_discharge.rs  layout_discharge.rs  marker_scan.rs  maybeuninit.rs  nonnull.rs  obligation_guard.rs  operation_scope.rs  option_state.rs  ownership_discharge.rs  pointer_arithmetic.rs  pointer_live_discharge.rs  raw_pointer_alignment.rs  raw_pointer_bounds.rs  reach_scan.rs  receiver_path.rs  set_len.rs  site_context.rs  source_value.rs  target_feature_discharge.rs  transmute.rs  u8_bool_value.rs  unreachable_discharge.rs  (+10 more)
crates/unsafe-review-core/src/analysis/obligations/: hazards.rs  safety.rs
crates/unsafe-review-core/src/analysis/pipeline/: action_summary.rs  card_builder.rs  card_identity.rs  input_loading.rs  mod.rs  summary.rs
crates/unsafe-review-core/src/analysis/scanner/: detection.rs  fallback_scan.rs  file_scan.rs  item_names.rs  js_buffer_reentry.rs  js_native_ffi_byte_source.rs  js_shared_byte_source.rs  owner_context.rs  owners.rs  panic_from_safe_js.rs  scan_site.rs  syntax_scan.rs  syntax_sites.rs  text.rs  text_detection.rs
crates/unsafe-review-core/src/analysis/syntax/: location.rs  mod.rs  parser.rs  source_text.rs  types.rs
crates/unsafe-review-core/src/domain/: classification.rs  coverage.rs  evidence.rs  hazard.rs  ids.rs  location.rs  mod.rs  obligation.rs  operation.rs  receipt.rs  review_card.rs  witness.rs
crates/unsafe-review-core/src/domain/receipt/: summary.rs
crates/unsafe-review-core/src/input/: diff.rs  mod.rs  workspace.rs
crates/unsafe-review-core/src/output/: agent.rs  badges.rs  comment_plan.rs  confirmation.rs  gate_manifest.rs  human.rs  json.rs  lsp.rs  markdown.rs  markdown_table.rs  mod.rs  outcome.rs  policy_report.rs  receipt_audit.rs  repair_queue.rs  sarif.rs  usefulness_telemetry.rs  witness_plan.rs
crates/unsafe-review-core/src/output/agent/: context.rs  evidence.rs  model.rs  packet.rs  queue.rs  range_scan.rs  readiness.rs  repairs.rs  tests.rs
crates/unsafe-review-core/src/output/agent/repairs/: card_missing.rs  common.rs  operation.rs
crates/unsafe-review-core/src/output/comment_plan/: mod.rs  model.rs  render.rs  selection.rs
crates/unsafe-review-core/src/output/human/: card.rs  header.rs  mod.rs
crates/unsafe-review-core/src/output/lsp/: mod.rs  projection.rs  tests.rs
crates/unsafe-review-core/src/output/lsp/projection/: code_actions.rs  hover.rs
crates/unsafe-review-core/src/output/outcome/: markdown.rs  mod.rs  witness.rs
crates/unsafe-review-core/src/policy/: mod.rs
crates/unsafe-review-core/src/util/: mod.rs  sha256.rs
crates/unsafe-review/src/: lib.rs  main.rs
crates/unsafe-review/tests/: e2e.rs
docs/: ARCHITECTURE.md  BADGE_POLICY.md  CLI.md  FIND_AND_FIX_UB.md  FIRST_HOUR.md  FIRST_USE.md  FUZZING.md  MISSION.md  PRINCIPLES.md  README.md  REPO_STYLE.md  ROADMAP.md  START-HERE.md  USAGE.md  VISION.md  spec-style.md
fixtures/: calibration.toml
fuzz/: Cargo.toml  README.md
fuzz/corpus/analysis/: raw_pointer_read
fuzz/corpus/analyze/: basic  diff-tail-seed  file-diff-mode  test-discovery-seed
fuzz/corpus/analyze_diff/: raw-pointer-alignment.diff
fuzz/corpus/analyze_source/: public_unsafe.rs  raw_pointer_read.rs
fuzz/fuzz_targets/: analysis.rs  analyze.rs  analyze_diff.rs  analyze_source.rs
policy/: accuracy-calibration.toml  ci-lane-whitelist.toml  clippy-exceptions.toml  clippy-lints.toml  corpus-backstop-sample-report.json  corpus-usefulness-sample-rollup.json  detector-contracts.toml  doc-artifacts.toml  docs-automation.toml  generated-allowlist.toml  (+15 more)
xtask/: Cargo.toml
xtask/src/: accuracy_labels.rs  advisory_artifacts.rs  calibration_constants.rs  calibration_manifest.rs  command_args.rs  commands.rs  corpus_backstop.rs  corpus_usefulness.rs  docs_automation_paths.rs  dogfood_exec.rs  dogfood_usefulness.rs  first_hour.rs  main.rs  markdown.rs  public_badges.rs  public_surfaces.rs  real_pr_corpus.rs  source_sync.rs  spec_status.rs  support_tiers.rs  workflow_allowlist.rs
(+3121 files in other folders)
