[package]
name = "unsafe-review-fuzz"
version = "0.0.0"
publish = false
edition = "2024"
rust-version = "1.95"
license = "MIT OR Apache-2.0"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
unsafe-review-core = { path = "../crates/unsafe-review-core" }

[[bin]]
name = "analyze_diff"
path = "fuzz_targets/analyze_diff.rs"
test = false
doc = false
bench = false
