[package]
name = "unsafe-review-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
serde_json = "1"
unsafe-review-core = { path = "../crates/unsafe-review-core" }

[[bin]]
name = "analysis"
path = "fuzz_targets/analysis.rs"
test = false
doc = false
bench = false
