[package]
name = "unsafe-review-fuzz"
version = "0.0.0"
edition = "2024"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
serde_json = "1"
unsafe-review-core = { path = "../crates/unsafe-review-core" }

[[bin]]
name = "analyze"
path = "fuzz_targets/analyze.rs"
test = false
doc = false
bench = false
