[package]
name = "xtask"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish = false

[dependencies]
serde_json = "1"
toml = { version = "1.1", default-features = false, features = ["parse"] }

[lints]
workspace = true
