[package]
name = "xtask"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish = false

[dependencies]
unsafe-review-core = { path = "../crates/unsafe-review-core", version = "0.2.1" }
serde_json = "1"
toml = { version = "1.1", default-features = false, features = ["parse", "serde"] }

[lints]
workspace = true
