[package]
name = "unsafe-review-cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "CLI adapter for unsafe-review"
keywords = ["unsafe", "rust", "cli", "miri", "review"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
unsafe-review-core = { path = "../unsafe-review-core", version = "0.1.0" }

[lib]
name = "unsafe_review_cli"
path = "src/lib.rs"

[[bin]]
name = "cargo-unsafe-review"
path = "src/bin/cargo-unsafe-review.rs"

[dev-dependencies]
serde_json = "1"

[lints]
workspace = true
