[package]
name = "unsafe-review-cli"
version = "0.1.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/unsafe-review-cli"
description = "CLI adapter for unsafe-review"
keywords = ["unsafe", "rust", "cli", "miri", "review"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[dependencies]
unsafe-review-core = { path = "../unsafe-review-core", version = "0.1.1" }

[dev-dependencies]
serde_json = "1"

[lib]
name = "unsafe_review_cli"
path = "src/lib.rs"

[[bin]]
name = "cargo-unsafe-review"
path = "src/bin/cargo-unsafe-review.rs"

[lints]
workspace = true
