[package]
name = "unsafe-review-cli"
version = "0.3.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/unsafe-review-cli"
description = "CLI adapter for unsafe-review"
keywords = ["unsafe", "rust", "cli", "miri", "review"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[dependencies]
unsafe-review-core = { path = "../unsafe-review-core", version = "0.3.0" }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "io-std", "io-util", "sync", "time"] }
tower-lsp-server = "0.23.0"

[lib]
name = "unsafe_review_cli"
path = "src/lib.rs"

[[bin]]
name = "cargo-unsafe-review"
path = "src/bin/cargo-unsafe-review.rs"

[lints]
workspace = true
