[package]
name = "unsafe-review-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Core SDK and static analysis engine for unsafe-review"
keywords = ["unsafe", "rust", "miri", "static-analysis", "review"]
categories = ["development-tools", "development-tools::testing"]

[lib]
name = "unsafe_review_core"
path = "src/lib.rs"

[dependencies]
ra_ap_syntax = "0.0.332"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
proptest = { version = "1", default-features = false, features = ["std"] }

[lints]
workspace = true
