[package]
name = "unsafe-review"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Cheap unsafe Rust review: find missing safety contracts, guards, tests, and witnesses"
keywords = ["unsafe", "rust", "miri", "static-analysis", "review"]
categories = ["command-line-utilities", "development-tools", "development-tools::testing"]
readme = "README.md"

[dependencies]
unsafe-review-cli = { path = "../unsafe-review-cli", version = "0.1.0" }
unsafe-review-core = { path = "../unsafe-review-core", version = "0.1.0" }

[[bin]]
name = "unsafe-review"
path = "src/main.rs"

[lib]
name = "unsafe_review"
path = "src/lib.rs"

[lints]
workspace = true
